# esp32-work

./: Cargo.toml
.cargo/: config.toml
