[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello-world"
path = "./src/bin/main.rs"
test = false
doctest = false
bench = false

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
    "halt-cores",
    "colors",
] }

esp-hal = { version = "0.22.0", features = ["esp32", "log"] }
esp-println = { version = "0.12.0", features = ["esp32", "log", "colors"] }
log = { version = "0.4.21" }
critical-section = "1.2.0"
lcd-lcm1602-i2c = "0.3.0"
esp-alloc = "0.5.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
